--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,7 +3,10 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - main  # Adjust if needed
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   test:
@@ -11,43 +14,42 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'  # Change if needed
+          python-version: '3.10'
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt || echo "No requirements.txt found!"
-
-      - name: Debug directory structure
-        run: ls -R  # Check if `app.py` and `tests/` exist
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest
 
       - name: Run tests
-        run: pytest --maxfail=5 --disable-warnings || echo "Tests failed but continuing."
+        run: pytest tests/
 
   build:
-    needs: test  # Only run build if tests pass
+    needs: test
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to DockerHub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push Docker image
         run: |
-          docker buildx build --platform linux/amd64 \
+          docker buildx build --platform linux/amd64 --push \
             -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.IMAGE_NAME }}:latest \
-            . \
-            --push
+            .
+
