--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -51,5 +51,6 @@ jobs:
         run: |
           docker buildx build --platform linux/amd64 --push \
             -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.IMAGE_NAME }}:latest \
-            .
+            -- push .
+            
 
