--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,8 +38,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      
 
       - name: Log in to DockerHub
         uses: docker/login-action@v3
@@ -47,10 +46,14 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push Docker image
+      - name: Build Docker image
+        run: docker build -t bug-free .
+
+
+      - name: Push to Docker Hub
         run: |
-          docker buildx build --platform linux/amd64 --push \
-            -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.IMAGE_NAME }}:latest \
-            -- push .
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          docker tag bug-free vikasch123/my-cicd:latest
+          docker push vikasch123/my-cicd:latest
             
 
